--- a/src/index.css
+++ b/src/index.css
@@ -34,22 +34,22 @@ html {
  background: url("./assets/testecentre.jpg") no-repeat top;
   background-color: #D3D3D3;
   overflow-y: hidden;
+  overflow: hidden;
+
+
 }
 
 body {
-  margin: 0;
-  padding: 0;
   overflow-x: hidden;
-
+  height: 100%;
+  width: 100%;
 }
 
 .ContainerSite {
-  left: 0;
-  top: 0;
   right: -30px;
-  bottom: 0;	
   padding-right: 15px;
   z-index: -1;
+  overflow: hidden;
 
 }
 
@@ -344,12 +344,30 @@ body {
   }
 }
 
-
-/*479PX MAX*/
-@media screen and (max-width: 479px) {
+@media screen and (max-width: 1280px) {
   .LogoCnmAfterStartContainer {
     position: absolute;
-    top: 50%; left: 49.0%;
+    top: 53%; left: 49%;
+    transform: translateY(-50%);
+    transform: translate(-50%, -50%);
+    margin-top: 0vh;
+    z-index: -3;
+  }
+}
+
+/*768PX MAX*/
+@media screen and (max-width: 768px) {
+
+  .LogoCnmAfterStart {
+    width: 100vh;
+    height: 12vh;
+    contain-intrinsic-block-size: auto 100px;
+    transform-style: preserve-3d;
+    will-change: transform;
+  }
+  .LogoCnmAfterStartContainer {
+    position: absolute;
+    top: 52%; left: 48.0%;
     transform: translateY(-50%);
     transform: translate(-50%, -50%);
     margin-top: 0vh;
@@ -455,12 +473,12 @@ body {
 }
 
 
-@media screen and (max-width: 1025px) {
+@media screen and (max-width: 1024px) {
   .containerFormationRectangle {
     position: absolute;
     width: 150vw;
     height: 90vh;
-    top: 50%; left: 49.7%;
+    top: 50%; left: 49.1%;
     transform: translateY(-50%);
     transform: translate(-50%, -50%);
     display: flex;
@@ -492,9 +510,9 @@ body {
 @media screen and (max-width: 768px) {
   .containerFormationRectangle {
     position: absolute;
-    width: 100vw;
-    height: 100vh;
-    top: 50%; left: 43%;
+    width: 140vw;
+    height: 105vh;
+    top:53%; left: 47.3%;
     transform: translateY(-50%);
     transform: translate(-50%, -50%);
     display: flex;
@@ -512,6 +530,22 @@ body {
     width: 180vw;
     height: 70vh;
     top: 50%; left: 45%;
+    transform: translateY(-50%);
+    transform: translate(-50%, -50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 0vh;
+    z-index: -3;
+  
+  }  
+}
+@media screen and (max-width: 425px) {
+  .containerFormationRectangle {
+    position: absolute;
+    width: 180vw;
+    height: 75vh;
+    top: 50%; left: 46%;
     transform: translateY(-50%);
     transform: translate(-50%, -50%);
     display: flex;
@@ -557,12 +591,28 @@ body {
   }  
 }
 
-@media screen and (max-width: 360px) {
+@media screen and (max-width: 375px) {
   .containerFormationRectangle {
     position: absolute;
     width: 180vw;
-    height: 60vh;
-    top: 50%; left: 42.5%;
+    height: 70vh;
+    top: 50%; left: 44.8%;
+    transform: translateY(-50%);
+    transform: translate(-50%, -50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 0vh;
+    z-index: -3;
+  
+  }  
+}
+@media screen and (max-width: 320px) {
+  .containerFormationRectangle {
+    position: absolute;
+    width: 180vw;
+    height: 70vh;
+    top: 50%; left: 43.3%;
     transform: translateY(-50%);
     transform: translate(-50%, -50%);
     display: flex;
@@ -618,6 +668,71 @@ body {
     height: 75px;
     left: 44.25%;
     top: 53%;
+    background: transparent;
+  
+  }
+  
+}
+@media screen and (max-width: 1024px) {
+  .containerSliderFormationP {
+    z-index: 20;
+    position: absolute;
+    width: 145px;
+    height: 50px;
+    left: 45.1%;
+    top: 54%;
+    background: transparent;
+  
+  }
+  
+}
+@media screen and (max-width: 768px) {
+  .containerSliderFormationP {
+    z-index: 20;
+    position: absolute;
+    width: 145px;
+    height: 70px;
+    left: 45.2%;
+    top: 55%;
+    background: transparent;
+  
+  }
+  
+}
+@media screen and (max-width: 425px) {
+  .containerSliderFormationP {
+    z-index: 20;
+    position: absolute;
+    width: 120px;
+    height: 50px;
+    left: 44.2%;
+    top: 55%;
+    background: transparent;
+  
+  }
+  
+}
+@media screen and (max-width: 425px) {
+  .containerSliderFormationP {
+    z-index: 20;
+    position: absolute;
+    width: 100px;
+    height: 41px;
+    left: 44.2%;
+    top: 55%;
+    background: transparent;
+  
+  }
+  
+}
+@media screen and (max-width: 320px) {
+  .containerSliderFormationP {
+    z-index: 20;
+    position: absolute;
+    width: 100px;
+    height: 41px;
+    left: 45%;
+    top: 56%;
     background: transparent;
   
   }
