--- a/src/pages/shop/formationPrincipal.css
+++ b/src/pages/shop/formationPrincipal.css
@@ -63,7 +63,7 @@
     z-index: -3;
   }
 }
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 430px) {
   .FormationRectangle {
     position: absolute;
     width: 108px;
@@ -265,7 +265,7 @@
   }
   
 }
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 430px) {
   .arrow-left {
     top: 74vh;
     left: 85vh;
@@ -281,6 +281,37 @@
     display: flex;
     height: 50%;
     margin-left: 4.0%;
+    width: 150px;
+    z-index: -2;
+    align-items: flex-end;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+
+  }
+
+  .BOXarrow{
+    height: 100%;
+    width: 80%;
+    margin-left: 7%;
+  }
+  
+}
+@media screen and (max-width: 375px) {
+  .arrow-left {
+    top: 74vh;
+    left: 85vh;
+    z-index: -2;
+  }
+  
+  .arrow-right {
+    top: 74vh;
+    right: 82.5vh;
+    z-index: -2;
+  }
+  .ContainerArrow{
+    display: flex;
+    height: 52%;
+    margin-left: 6.1%;
     width: 150px;
     z-index: -2;
     align-items: flex-end;
