--- a/src/pages/description/DescStreetWorkout/DescStreetWorkout.css
+++ b/src/pages/description/DescStreetWorkout/DescStreetWorkout.css
@@ -36,6 +36,7 @@ color: #141417;*/
   align-content: center;
   flex-direction: row;
 }
+
 .ImgFormation{
   width: 350px;
   height: 437.5px;
@@ -306,4 +307,405 @@ color: #141417;*/
   align-items: center;
   height: 100%;
   justify-content: center;
+}
+
+@media screen and (max-width: 1440px) {
+  .ContainerFormationImg{
+    width: 550px;
+    height: 650px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    align-content: center;
+    flex-direction: row;
+  }
+  .BOXImgFormation {
+    width: 50px;
+    height: 437.5px;
+  }
+  .Description {
+    width: 100%;
+    height: 1850px;
+    display: inline-block;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .ContainerFormationImg{
+    width: 550px;
+    height: 650px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    align-content: center;
+    flex-direction: row;
+  }
+  .BOXImgFormation {
+    width: 50px;
+    height: 437.5px;
+  }
+  .Description {
+    width: 100%;
+    height: 2050px;
+    display: inline-block;
+  }
+  .ContainerDesc{
+    height: 50%;
+    width: 95%;
+    
+  }
+  .Desc {
+    font-family: 'Myriad Apple';
+    font-size: 19px;
+    line-height: 1.381002381;
+    font-weight: 600;
+    letter-spacing: .011em;
+    display: block;
+    text-align: left;
+    word-wrap: break-word;
+    border-top: 1px solid hsla(0, 6%, 90%, 0.829);
+    border-bottom: 1px solid hsla(0, 6%, 90%, 0.829);
+    color: #ffff;
+  
+  }
+  .card {
+    position: absolute;
+    width: 264px;
+    height: 330px;
+    background: grey;
+    border-radius: 30px;
+    box-shadow: 0px 10px 30px -5px rgba(255, 255, 255, 0.3);
+    transition: box-shadow 0.5s, opacity 0.5s;
+    will-change: transform;
+    border: 5px solid white;
+    cursor: grab;
+    overflow: hidden;
+    touch-action: none;
+  }  
+  .ContainerTitleDesc {
+    height: 60%;
+    width: 100%;
+    display: flex;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: flex-start;
+    align-items: flex-end;
+  }
+  .ContainerPriceDesc {
+    height: 40%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-wrap: nowrap;
+  }
+  .ContainerAddToCar{
+    height: 35%;
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-wrap: nowrap;
+  }
+  .ButtonAddToCard{
+    font-family: 'Myriad Apple';
+    font-size: 19px;
+    line-height: 1.381002381;
+    font-weight: 600;
+    letter-spacing: .011em;
+    width: 40%;
+    height: 35%;
+    background-color: #D76350;
+    border-radius: 10px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .ContainerFormationImg{
+    width: 550px;
+    height: 650px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    align-content: center;
+    flex-direction: row;
+  }
+  .BOXImgFormation {
+    width: 50px;
+    height: 437.5px;
+  }
+  .Description {
+    width: 100%;
+    height: 2000px;
+    display: inline-block;
+  }
+  .ContainerDesc{
+    height: 50%;
+    width: 95%;
+    
+  }
+  .Desc {
+    font-family: 'Myriad Apple';
+    font-size: 18px;
+    line-height: 1.35;
+    font-weight: 600;
+    letter-spacing: .005em;
+    display: block;
+    text-align: left;
+    word-wrap: break-word;
+    border-top: 1px solid hsla(0, 6%, 90%, 0.829);
+    border-bottom: 1px solid hsla(0, 6%, 90%, 0.829);
+    color: #ffff;
+  
+  }
+  .card {
+    position: absolute;
+    width: 240px;
+    height: 300px;
+    background: grey;
+    border-radius: 30px;
+    box-shadow: 0px 10px 30px -5px rgba(255, 255, 255, 0.3);
+    transition: box-shadow 0.5s, opacity 0.5s;
+    will-change: transform;
+    border: 5px solid white;
+    cursor: grab;
+    overflow: hidden;
+    touch-action: none;
+  }  
+  .ContainerTitleDesc {
+    height: 60%;
+    width: 100%;
+    display: flex;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: flex-start;
+    align-items: flex-end;
+  }
+  .ContainerPriceDesc {
+    height: 40%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-wrap: nowrap;
+  }
+  .ContainerAddToCar{
+    height: 15%;
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-end;
+    flex-wrap: nowrap;
+  }
+  .ButtonAddToCard{
+    font-family: 'Myriad Apple';
+    font-size: 18px;
+    line-height: 1.381002381;
+    font-weight: 600;
+    letter-spacing: .011em;
+    width: 40%;
+    height: 55%;
+    background-color: #D76350;
+    border-radius: 10px;
+  }
+  .DescDown {
+    height: 90%;
+    width: 100%;
+  }
+  .ButtonAddToPaypal{
+    font-family: 'Myriad Apple';
+    font-size: 18px;
+    line-height: 1.381002381;
+    font-weight: 600;
+    letter-spacing: .011em;
+    width: 39%;
+    height: 54%;
+    border-radius: 10px;
+
+  }
+  .texteDescAvantage{
+    font-family: 'Myriad Apple';
+    font-size: 15px;
+    line-height: 2.1;
+    font-weight: 800;
+    letter-spacing: -0.022em;
+    color: white;
+  
+  }
+  .texteDesc{
+    font-family: 'Myriad Apple';
+    font-size: 15px;
+    line-height: 1.50;
+    font-weight: 500;
+    letter-spacing: -0.022em;
+    color: white;
+  
+  }
+  .DescTitleBack {
+    font-family: 'Myriad Apple';
+    font-size: 35px;
+    line-height: 1.0714285714;
+    font-weight: 600;
+    letter-spacing: -0.005em;
+    color: #FF8E7A;
+  }
+  .TitleDesc2{
+    font-family: 'Myriad Apple';
+    font-size: 25px;
+    line-height: 1.1428571429;
+    font-weight: 600;
+    letter-spacing: .007em;
+    color: #FF8E7A;
+
+  }
+}
+
+
+
+
+
+
+@media screen and (max-width: 430px) {
+  .ContainerFormationImg{
+    background-color: #FF8C78;
+    width: 200px;
+    height: 500px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    align-content: center;
+    flex-direction: row;
+  }
+  .BOXImgFormation {
+    width: 10px;
+    height: 437.5px;
+  }
+  .Description {
+    width: 100%;
+    height: 2150px;
+    display: inline-block;
+  }
+  .ContainerDesc{
+    height: 50%;
+    width: 95%;
+    
+  }
+  .Desc {
+    font-family: 'Myriad Apple';
+    font-size: 15px;
+    line-height: 1.3;
+    font-weight: 600;
+    letter-spacing: .005em;
+    display: block;
+    text-align: left;
+    word-wrap: break-word;
+    border-top: 1px solid hsla(0, 6%, 90%, 0.829);
+    border-bottom: 1px solid hsla(0, 6%, 90%, 0.829);
+    color: #ffff;
+  
+  }
+  .card {
+    position: absolute;
+    width: 160px;
+    height: 200px;
+    background: grey;
+    border-radius: 30px;
+    box-shadow: 0px 10px 30px -5px rgba(255, 255, 255, 0.3);
+    transition: box-shadow 0.5s, opacity 0.5s;
+    will-change: transform;
+    border: 5px solid white;
+    cursor: grab;
+    overflow: hidden;
+    touch-action: none;
+  }  
+  .ContainerTitleDesc {
+    height: 60%;
+    width: 100%;
+    display: flex;
+    flex-wrap: nowrap;
+    align-content: center;
+    justify-content: flex-start;
+    align-items: flex-end;
+  }
+  .ContainerPriceDesc {
+    height: 40%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-wrap: nowrap;
+  }
+  .ContainerAddToCar{
+    height: 15%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    flex-wrap: nowrap;
+  }
+  .ButtonAddToCard{
+    font-family: 'Myriad Apple';
+    font-size: 14px;
+    line-height: 1.381002381;
+    font-weight: 600;
+    letter-spacing: .011em;
+    width: 50%;
+    height: 45%;
+    background-color: #D76350;
+    border-radius: 10px;
+  }
+  .DescDown {
+    height: 90%;
+    width: 100%;
+  }
+  .texteDescAvantage{
+    font-family: 'Myriad Apple';
+    font-size: 12px;
+    line-height: 2.2;
+    font-weight: 600;
+    letter-spacing: -0.02em;
+    color: white;
+  
+  }
+  .texteDesc{
+    font-family: 'Myriad Apple';
+    font-size: 12px;
+    line-height: 1.50;
+    font-weight: 500;
+    letter-spacing: -0.022em;
+    color: white;
+  
+  }
+  .DescTitleBack {
+    font-family: 'Myriad Apple';
+    font-size: 30px;
+    line-height: 1.0714285714;
+    font-weight: 600;
+    letter-spacing: -0.005em;
+    color: #FF8E7A;
+  }
+  .TitleDesc2{
+    font-family: 'Myriad Apple';
+    font-size: 20px;
+    line-height: 1.1428571429;
+    font-weight: 600;
+    letter-spacing: .007em;
+    color: #FF8E7A;
+
+  }
+  .TitleDesc {
+    font-family: 'Myriad Apple';
+    font-size: 5.5vw;
+    line-height: 120%;
+    font-weight: 600;
+    color: #FF8C78;
+  }
+  .MarketingInfoDesc {
+    border-left: 1px solid hsl(0, 4%, 90%);
+    width: 45%;
+    height: 75%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 }
