--- a/src/pages/description/Desc.css
+++ b/src/pages/description/Desc.css
@@ -511,7 +511,7 @@ color: #141417;*/
     line-height: 1.381002381;
     font-weight: 600;
     letter-spacing: .011em;
-    width: 40%;
+    width: 45%;
     height: 55%;
     background-color: #D76350;
     border-radius: 10px;
@@ -647,7 +647,7 @@ color: #141417;*/
     width: 100%;
     display: flex;
     justify-content: center;
-    align-items: flex-end;
+    align-items: flex-start;
     flex-wrap: nowrap;
   }
   .ButtonAddToCard{
@@ -665,6 +665,8 @@ color: #141417;*/
   .DescDown {
     height: 90%;
     width: 100%;
+    display: flex;
+    flex-wrap: wrap;
   }
   .texteDescAvantage{
     font-family: 'Myriad Apple';
@@ -719,6 +721,13 @@ color: #141417;*/
 }
 
 @media screen and (max-width: 390px) {
+  .DescDown {
+    height: 90%;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: flex-start;
+  }
   .ContainerFormationImg{
     width: 180px;
     height: 500px;
@@ -807,10 +816,6 @@ color: #141417;*/
     background-color: #D76350;
     border-radius: 10px;
   }
-  .DescDown {
-    height: 90%;
-    width: 100%;
-  }
   .texteDescAvantage{
     font-family: 'Myriad Apple';
     font-size: 12px;
@@ -867,6 +872,14 @@ color: #141417;*/
     width: 100%;
     height: 2300px;
     display: inline-block;
+  }
+  .ContainerAddToCar {
+    height: 15%;
+    width: 105%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    flex-wrap: nowrap;
   }
 }
 @media screen and (max-width: 330px) {
