--- a/src/pages/description/Desc.css
+++ b/src/pages/description/Desc.css
@@ -420,6 +420,27 @@ color: #141417;*/
     border-radius: 10px;
   }
 }
+@media screen and (max-width: 835px) {
+  .Description {
+    width: 100%;
+    height: 2500px;
+    display: inline-block;
+  }
+  .DescDown {
+    height: 90%;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .ContainerAddToCar{
+    height: 35%;
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+    flex-wrap: nowrap;
+  }
+}
 @media screen and (max-width: 820px) {
   .Description {
     width: 100%;
@@ -449,7 +470,6 @@ color: #141417;*/
   .ContainerDesc{
     height: 50%;
     width: 95%;
-    
   }
   .Desc {
     font-family: 'Myriad Apple';
@@ -519,6 +539,8 @@ color: #141417;*/
   .DescDown {
     height: 90%;
     width: 100%;
+    display: flex;
+    align-content: flex-start;
   }
   .ButtonAddToPaypal{
     font-family: 'Myriad Apple';
@@ -881,6 +903,12 @@ color: #141417;*/
     align-items: flex-end;
     flex-wrap: nowrap;
   }
+  .DescDown {
+    height: 90%;
+    width: 100%;
+    display: flex;
+    align-content: flex-start;
+  }
 }
 @media screen and (max-width: 330px) {
   .ContainerFormationImg{
@@ -902,7 +930,7 @@ color: #141417;*/
     display: inline-block;
   }
   .ContainerDesc{
-    height: 50%;
+    height: 65%;
     width: 100%;
     
   }
@@ -952,7 +980,6 @@ color: #141417;*/
     flex-wrap: nowrap;
   }
   .ContainerAddToCar {
-    margin-top: 38%;
     height: 15%;  
     width: 100%;
     display: flex;
@@ -975,6 +1002,8 @@ color: #141417;*/
   .DescDown {
     height: 90%;
     width: 100%;
+    display: flex;
+    align-content: flex-start;
   }
   .texteDescAvantage{
     font-family: 'Myriad Apple';
