--- a/src/pages/description/Desc.css
+++ b/src/pages/description/Desc.css
@@ -765,7 +765,7 @@ color: #141417;*/
   }
   .Description {
     width: 100%;
-    height: 2200px;
+    height: 2250px;
     display: inline-block;
   }
   .ContainerDesc{
@@ -889,6 +889,7 @@ color: #141417;*/
     justify-content: center;
   }
 }
+
 @media screen and (max-width: 375px) {
   .Description {
     width: 100%;
@@ -1063,5 +1064,31 @@ color: #141417;*/
     display: flex;
     align-items: center;
     justify-content: center;
+  }
+}
+@media screen and (max-width: 360px) {
+  .ContainerDesc {
+      height: 55%;
+      width: 95%;
+  }
+  .ContainerAddToCar {
+    height: 15%;
+    width: 105%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: nowrap;
+  }
+  .ButtonAddToCard {
+    color: #141417;
+    font-family: 'Myriad Apple';
+    font-size: 14px;
+    line-height: 1.381002381;
+    font-weight: 600;
+    letter-spacing: .011em;
+    width: 65%;
+    height: 45%;
+    background-color: #D76350;
+    border-radius: 10px;
   }
 }
