--- a/src/pages/cart/cart.css
+++ b/src/pages/cart/cart.css
@@ -29,49 +29,35 @@ time, mark, audio, video, button  {
 
 
 .cartContainer {
-  position: absolute;
-  left: 0;
-  top: 0;
-  right: -30px;
-  bottom: 0;	
+  width: 100%;
+  height: 1000px;
   padding-right: 15px;
   overflow-y: scroll;
-  z-index: -1;
-  
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.containercartItem{
+  width: 60%;
+  height: 55%;
 }
 
-.cart {
+.cartItem {
   width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.containercartItem {
-  position: absolute;
-  top: 50%; left: 50%;
-  transform: translateY(-50%);
-  transform: translate(-50%, -50%);
-  height: 60%;
-  width: 50%;
-  display: table-row-group;
   border-radius: 25px;
 }
 
 .description {
-  width: 50%;
+  width: 100%;
   display: flex;
   flex-wrap: nowrap;
   align-items: center;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: flex-start;
 }
 
 .DescriptionFormation {
-  position: absolute;
-  width: 28%;
-  height: 10%;
-  left: 15%;
+  width: 35%;
 }
 
 .TextDescriptionFormation {
@@ -104,14 +90,12 @@ time, mark, audio, video, button  {
 
 
 
-.Items{
+.Items {
   border-top: 1px solid hsl(0, 4%, 90%);
-  justify-content: space-between;
   flex-direction: row;
   display: flex;
-  align-items: stretch;
   border-bottom: 1px solid hsl(0, 4%, 90%);
-
+  align-items: center;
 }
 
 
@@ -120,7 +104,6 @@ time, mark, audio, video, button  {
   width: 120px;
   height: 32px;
   border: 1px solid #1D1D1F;
-  margin: 0 auto;
   flex-wrap: nowrap;
   justify-content: center;
 }
@@ -155,46 +138,90 @@ time, mark, audio, video, button  {
   width: 33.33333%;
 }
 
-.checkout {
-  width: 150px;
-  height: 50px;
-  color: white;
-  border: none;
-  border-radius: 8px;
-  margin: 10px;
-  cursor: pointer;
-}
-
-.DescriptionCart{
-  position: absolute;
-  top: 14%;
-  left: 50%;
-  transform: translateY(-50%);
-  transform: translate(-50%, -50%);
-  height: 10%;
-  width: 50%;
+.ContainerCheckout {
+  width: 100%;
+  height: 100px;
   display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  align-items: baseline;
-  box-sizing: border-box;
+  align-items: flex-end;
+  justify-content: flex-end;
+}
+.BOX1description{
+  width: 2%;
+}
+
+.BOX2description{
+  width: 11%;
+}
+
+.BOX3description{
+  width: 12%;
+}
+
+.BOX4description{
+  width: 11%;
 
 }
 
+
+
+.checkout{
+  width: 80%;
+  height: 98%;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+
+.ContainerButtonCart{
+  display: flex;
+  width: 60%;
+  height: 50%;
+  align-items: center;
+  justify-content: space-evenly;;
+
+}
+
+.DescriptionCart {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: baseline;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
 
 .ContainerCartPanier{
  height: 100%;
- width: 50.5%;
 }
 
+.Box1cart{
+  height: 100%;
+  width: 31.7%;
+}
+ 
 .ContainerCartPrix{
   height: 100%;
-  width: 22.6%;
+}
+
+.Box2cart{
+  height: 100%;
+  width: 14%;
 }
 
 .ContainerCartTotal{
   height: 100%;
+}
 
+.Box3cart{
+  height: 100%;
+  width: 10%;
+}
+
+.ContainerViderPanier{
+  height: 100%;
 }
 
 
@@ -220,7 +247,7 @@ time, mark, audio, video, button  {
 
 .TextDescriptionCartTotal {
   position: static;
-  color: #1D1D1F;
+  color: #28282b;
   font-family: 'Myriad Apple';
   font-size: 20px;
   font-weight: 600;
@@ -228,18 +255,22 @@ time, mark, audio, video, button  {
   line-height: 1.4705882353;
 }
 
-
+.TextDescriptionViderPanier {
+  position: static;
+  color: #1D1D1F;
+  font-family: 'Myriad Apple';
+  font-size: 15px;
+  font-weight: 600;
+  letter-spacing: 0;
+  line-height: 1.4705882353;
+  text-decoration: underline;
+}
 
 
 .TotalcheckoutConteiner {
-  width: 400px;
-  height: 50px;
+  width: 60%;
+  height: 50%;
   display: flex;
-  position: absolute;
-  top: 83%;
-  left: 64.6%;
-  transform: translateY(-50%);
-  transform: translate(-50%, -50%);
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
@@ -257,7 +288,7 @@ time, mark, audio, video, button  {
 }
 
 .TotalcheckoutPrix {
-  color: #848484;
+  color: #666666;
   font-family: 'Myriad Apple';
   font-size: 24px;
   font-weight: 600;
@@ -271,45 +302,33 @@ time, mark, audio, video, button  {
 }
 
 .ButtonContinuerAchats {
-  position: absolute;
-  top: 87%;
-  left: 54.2%;
-  width: 180px;
-  height: 35px;
+  width: 45%;
+  height: 75%;
   border-radius: 12px;
   background-color: #C25B4B;
   display: flex;
-  align-content: center;
-  justify-content: center;
-  flex-wrap: nowrap;
-  flex-direction: row;
   align-items: center;
+  justify-content: center;
 }
 
 .ButtonPayement {
-  width: 180px;
-  height: 35px;
+  width: 45%;
+  height: 76%;
   border-radius: 12px;
-  background-color: #0071e3;
-  position: absolute;
-  top: 87%;
-  left: 65.8%;
+  background-color: #141417;
   display: flex;
-  align-content: center;
-  justify-content: center;
-  flex-wrap: nowrap;
-  flex-direction: row;
   align-items: center;
+  justify-content: center;
 }
-
 
 
 .ButtonPayementText {
   font-family: 'Myriad Apple';
   font-size: 18px;
-  font-weight: 400;
+  font-weight: 600;
   letter-spacing: -.022em;
   line-height: 1.1764805882;
+  color: white;
   
 }
 
@@ -353,8 +372,18 @@ height: 60vh;*/
 
 .price{
   font-family: 'Myriad Apple';
-  font-size: 15px;
-  font-weight: 500;
+  font-size: 17px;
+  font-weight: 600;
 
 }
 
+.ClearContainer{
+  width: 16px;
+  height: 16px;
+  background-color: transparent;
+}
+
+
+.Clear{
+  width: 100%;
+}
