--- a/src/pages/description/Desc.css
+++ b/src/pages/description/Desc.css
@@ -4,6 +4,11 @@
   font-weight: normal;
   src: url('../../Typeface/MYRIADAT.woff') format('woff');
 }
+body {
+  overflow-x: hidden;
+  height: 100%;
+  width: 100%;
+}
 
 .Description{
   width: 100%;
@@ -430,24 +435,24 @@ color: #141417;*/
     height: 2500px;
     display: inline-block;
   }
+  .ContainerAddToCar {
+    height: 35%;
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-wrap: nowrap;
+    position: relative;
+    z-index: 1;
+  }
   .DescDown {
-    height: 70%;
+    height: 65%;
     width: 100%;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
     align-items: center;
-  }
-  .ContainerAddToCar{
-    height: 35%;
-    width: 100%;
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    flex-wrap: nowrap;
-    position: relative;
-    z-index: 1;
-  }
+}
 }
 @media screen and (max-width: 820px) {
   .Description {
@@ -690,7 +695,7 @@ color: #141417;*/
     line-height: 1.381002381;
     font-weight: 600;
     letter-spacing: .011em;
-    width: 50%;
+    width: 55%;
     height: 45%;
     background-color: #D76350;
     border-radius: 10px;
@@ -850,7 +855,7 @@ color: #141417;*/
     line-height: 1.381002381;
     font-weight: 600;
     letter-spacing: .011em;
-    width: 55%;
+    width: 65%;
     height: 45%;
     background-color: #D76350;
     border-radius: 10px;
@@ -1056,7 +1061,7 @@ color: #141417;*/
     line-height: 1.381002381;
     font-weight: 600;
     letter-spacing: .011em;
-    width: 75%;
+    width: 80%;
     height: 45%;
     background-color: #D76350;
     border-radius: 10px;
