--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -15,8 +15,11 @@ a{
 .ButtonLogoCNMLeftUp {
   display: flex;
   background-color: transparent;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: nowrap;
+  margin-left: 15%;
 }
-
 .nav {
   position: fixed;
   width: 100%;
@@ -81,7 +84,8 @@ a{
   height: 46px;
   align-items: center;
   flex-wrap: nowrap;
-  flex-direction: row;
+  justify-content: space-between;
+
 }
 
 .NavInContainer{
@@ -90,13 +94,35 @@ a{
   width: 96%;
   height: 46px;
   align-items: center;
-  flex-wrap: nowrap;
-  flex-direction: row;
-  backdrop-filter:blur(30px);
+  backdrop-filter: blur(30px);
   box-shadow: 0px 0px 30px rgba(227, 228, 237, 0.37);
   border: 2px solid rgba(255, 255, 255, 0.18);
+  flex-wrap: nowrap;
+  justify-content: space-between;
 }
 
+.ButtonShopNav {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 67% ;
+  height: 84%;
+}
+
+.ButtonShopCart {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 25%;
+  height: 90%;
+}
+.RightNavBarre{
+  height: 100%;
+  width: 23%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
 
 .CNM-logo {
   width: 140px;
@@ -127,13 +153,17 @@ a{
   height: 100%;
 }
 
+.MoreProductsContainer{
+  width: 100%;
+  height: 76%;
+}
 .MoreProducts {
+  width: 100%;
+  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   text-align: center;
-  width: 150px;
-  height: 34px;
   background-color: #D76350;
   border-radius: 10px;
 }
@@ -148,12 +178,111 @@ a{
 }
 
 .Cart {
-  height: 35px;
   text-align: center;
+  height: 100%;
+  width: 100%;
+
 }
 
 .CartContainer {
-  background-color: transparent;
+  width: 90%;
+  height: 87%;
+  margin-bottom: 13%;
 }
 
 /*background: url("./assets/testecentre.jpg") no-repeat top;*/
+
+
+
+
+@media screen and (max-width: 1920px) {
+  .RightNavBarre {
+    height: 100%;
+    width: 12%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+  }
+  
+}
+
+@media screen and (max-width: 1440px) {
+  .RightNavBarre {
+      height: 100%;
+      width: 16%;
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .RightNavBarre {
+      height: 100%;
+      width: 21%;
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .RightNavBarre {
+      height: 100%;
+      width: 27%;
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+  }
+  .CNM-logo {
+    width: 130px;
+    height: 100%;
+  }
+  .MoreProducts {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+    background-color: #D76350;
+    border-radius: 10px;
+  }
+  .MoreProductsText {
+    font-size: 17px;
+  }
+  .Cart {
+    margin-top: 5%;
+    width: 100%;
+    height: 33px;
+    text-align: center;
+  }
+}
+
+
+@media screen and (max-width: 490px) {
+  .RightNavBarre {
+      height: 100%;
+      width: 27%;
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+      z-index: 30;
+
+  }
+  .NavInContainer{
+    border-radius: 10px;
+    display: flex;
+    width: 96%;
+    height: 46px;
+    align-items: center;
+    backdrop-filter: blur(30px);
+    box-shadow: 0px 0px 30px rgba(227, 228, 237, 0.37);
+    border: 2px solid rgba(255, 255, 255, 0.18);
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    z-index: 20;
+  }
+  
+}
+
